--- a/juridik.rmd
+++ b/juridik.rmd
@@ -1,5 +1,10 @@
 # Juridik
 
+## Psykiatrisk tvångsvård
+
+Insikt god, dålig, partiell, växlande viktigt vid LPT!
+
+
 ## Sekretess
 
 Om den som utsatts för brott är vuxen ska det vara fråga om ett begånget brott där lägsta straff är fängelse i ett år (till exempel grov misshandel, olaga frihetsberövande, mord, dråp, våldtäkt, mordbrand, rån). Man kan också lämna uppgifter om försök till brott där det inte är stadgat lindrigare straff än fängelse i två år (till exempel mord, dråp, människorov, våldtäkt).
